user can only rate link once; re-write mutations

--- a/backend/api/link/models/link.settings.json
+++ b/backend/api/link/models/link.settings.json
@@ -24,6 +24,12 @@
     "rating": {
       "type": "integer",
       "default": 0
+    },
+    "users": {
+      "plugin": "users-permissions",
+      "collection": "user",
+      "via": "links",
+      "dominant": true
     }
   }
 }
