--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,63 +1,70 @@
 {
-  "name": "frontend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "jest --watchAll",
-    "start": "webpack-dev-server",
-    "build:prod": "webpack --config webpack.config.prod.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "browserslist": "> 1%, last 2 versions",
-  "devDependencies": {
-    "@babel/core": "^7.10.1",
-    "@babel/plugin-proposal-class-properties": "^7.10.1",
-    "@babel/preset-env": "^7.10.1",
-    "@babel/preset-react": "^7.10.1",
-    "@babel/preset-stage-2": "^7.8.3",
-    "autoprefixer": "^9.8.0",
-    "babel-jest": "^26.0.1",
-    "babel-loader": "^8.1.0",
-    "css-loader": "^3.5.3",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2",
-    "enzyme-to-json": "^3.5.0",
-    "file-loader": "^6.0.0",
-    "html-webpack-plugin": "^4.3.0",
-    "jest": "^26.0.1",
-    "mini-css-extract-plugin": "^0.9.0",
-    "postcss-loader": "^3.0.0",
-    "style-loader": "^1.2.1",
-    "url-loader": "^4.1.0",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.11.0"
-  },
-  "dependencies": {
-    "@apollo/react-hooks": "^3.1.5",
-    "apollo-boost": "^0.4.9",
-    "apollo-cache-inmemory": "^1.6.6",
-    "apollo-client": "^2.6.10",
-    "apollo-link-http": "^1.5.17",
-    "axios": "^0.19.2",
-    "bootstrap": "^4.5.0",
-    "graphql": "^15.1.0",
-    "graphql-tag": "^2.10.3",
-    "prop-types": "^15.7.2",
-    "react": "^16.13.1",
-    "react-apollo": "^3.1.5",
-    "react-countdown": "^2.2.1",
-    "react-data-table-component": "^6.9.3",
-    "react-data-table-component-extensions": "^1.4.1",
-    "react-dom": "^16.13.1",
-    "react-hook-form": "^5.7.2",
-    "react-redux": "^7.2.0",
-    "react-router-dom": "^5.2.0",
-    "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0",
-    "styled-components": "^5.1.1"
-  }
+    "name": "frontend",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "jest --watchAll",
+        "start": "webpack-dev-server",
+        "build:prod": "webpack --config webpack.config.prod.js"
+    },
+    "jest": {
+        "snapshotSerializers": [
+            "enzyme-to-json/serializer"
+        ]
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "browserslist": "> 1%, last 2 versions",
+    "devDependencies": {
+        "@babel/core": "^7.10.1",
+        "@babel/plugin-proposal-class-properties": "^7.10.1",
+        "@babel/preset-env": "^7.10.1",
+        "@babel/preset-react": "^7.10.1",
+        "@babel/preset-stage-2": "^7.8.3",
+        "autoprefixer": "^9.8.0",
+        "babel-jest": "^26.1.0",
+        "babel-loader": "^8.1.0",
+        "css-loader": "^3.5.3",
+        "enzyme": "^3.11.0",
+        "enzyme-adapter-react-16": "^1.15.2",
+        "enzyme-to-json": "^3.5.0",
+        "file-loader": "^6.0.0",
+        "html-webpack-plugin": "^4.3.0",
+        "jest": "^26.1.0",
+        "mini-css-extract-plugin": "^0.9.0",
+        "postcss-loader": "^3.0.0",
+        "redux-mock-store": "^1.5.4",
+        "style-loader": "^1.2.1",
+        "url-loader": "^4.1.0",
+        "webpack": "^4.43.0",
+        "webpack-cli": "^3.3.11",
+        "webpack-dev-server": "^3.11.0"
+    },
+    "dependencies": {
+        "@apollo/react-hooks": "^3.1.5",
+        "@apollo/react-testing": "^3.1.4",
+        "apollo-boost": "^0.4.9",
+        "apollo-cache-inmemory": "^1.6.6",
+        "apollo-client": "^2.6.10",
+        "apollo-link-http": "^1.5.17",
+        "axios": "^0.19.2",
+        "bootstrap": "^4.5.0",
+        "graphql": "^15.1.0",
+        "graphql-tag": "^2.10.3",
+        "prop-types": "^15.7.2",
+        "react": "^16.13.1",
+        "react-apollo": "^3.1.5",
+        "react-countdown": "^2.2.1",
+        "react-data-table-component": "^6.9.3",
+        "react-data-table-component-extensions": "^1.4.1",
+        "react-dom": "^16.13.1",
+        "react-hook-form": "^5.7.2",
+        "react-redux": "^7.2.0",
+        "react-router-dom": "^5.2.0",
+        "redux": "^4.0.5",
+        "redux-thunk": "^2.3.0",
+        "styled-components": "^5.1.1"
+    }
 }
